# bookscout

./: .gitignore  README.md  pyproject.toml
src/bookscout/: __init__.py  cli.py  models.py
src/bookscout/scrapers/: __init__.py  base.py  blackwells.py  kennys.py  libristo.py  wordery.py
tests/: conftest.py  test_isbn_validation.py  test_price_parsing.py  test_scrapers.py
