[project]
name = "bookscout"
version = "0.1.0"
description = "Book price comparison CLI for Blackwells, Kennys, and Wordery"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.57.0",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[project.scripts]
bookscout = "bookscout.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bookscout"]
